--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
       <h1>Buscador de series de Anime</h1>
     </header>
     <main>
-      <div>
-        <form action="">
-          <label for=""></label>
-          <input type="text" />
-        </form>
-        <button>Buscar</button>
-      </div>
+      <section class="section">
+        <label for="search"></label>
+        <input id="search" type="text" class="input js-input" />
+        <button class="js-button">Buscar</button>
+
+        <div>
+          <div class=""></div>
+          <div class=""></div>
+        </div>
+      </section>
     </main>
     <script src="./js/main.js"></script>
   </body>
