--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         <input id="search" type="text" class="input js-input" />
         <button class="js-button">Buscar</button>
 
-        <div>
-          <div class=""></div>
-          <div class=""></div>
+        <div class="container" id="animeContainer">
+          <ul class="js-results"></ul>
+          <!-- <div class="listOfAnime"></div>
+          <div class="listOfAnime"></div> -->
         </div>
       </section>
     </main>
-    <script src="./js/main.js"></script>
+    <script src="./js/draft.js"></script>
   </body>
 </html>
