--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
       <h1>Buscador de series de Anime</h1>
     </header>
     <main>
-      <section class="section">
-        <label for="search"></label>
-        <input id="search" type="text" class="input js-input" />
-        <button class="js-button">Buscar</button>
+      <section>
+        <div class="searchDiv">
+          <label for="search"></label>
+          <input id="search" type="text" class="input js-input" />
+          <button class="js-button">Buscar</button>
+        </div>
 
-        <div class="container" id="animeContainer">
-          <ul class="js-results"></ul>
-          <!-- <div class="listOfAnime"></div>
-          <div class="listOfAnime"></div> -->
+        <div class="list">
+          <div class="divFavorites">
+            <h3>❤️ Tus favoritos ❤️</h3>
+            <div class="favorite-anime js-favorites"></div>
+          </div>
+          <div class="divResults">
+            <h3>▼ Resultados de tu búsqueda ▼</h3>
+            <div class="container js-container"></div>
+          </div>
         </div>
       </section>
     </main>
