reset button added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <label for="search"></label>
           <input id="search" type="text" class="input js-input" />
           <button class="js-button">Buscar</button>
+          <button class="js-reset-button">Reset</button>
         </div>
 
         <div class="list">
