finished ready to merge to main

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="searchDiv">
           <label for="search"></label>
           <input id="search" type="text" class="input js-input" />
-          <button class="js-button">Buscar</button>
-          <button class="js-reset-button">Reset</button>
+          <button class="js-button">Buscar 🔍</button>
+          <button class="js-reset-button">Reset 🔄</button>
         </div>
 
         <div class="list">
