project finished with bonus

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
         </div>
       </section>
     </main>
-    <script src="./js/draft.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
